--- a/.github/workflows/JUnit Report Action.yml
+++ b/.github/workflows/JUnit Report Action.yml
@@ -1,42 +1,49 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 name: build
 on:
   pull_request:
     branches: [ "main" ]
 
   workflow_dispatch:
-  
+
 jobs:
   build:
     name: Build and Run Tests
     runs-on: ubuntu-latest
-    permissions: read-all
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v1
-
-      - name: Set up JDK 18
-        uses: actions/setup-java@v1
-        with:
-          java-version: 18
-
-      - name: Build with Maven
-        run: mvn --batch-mode --update-snapshots package
-
+        uses: actions/checkout@v3
       - name: Build and Run Tests
-        run: mvn test # execute your tests generating test results
-        
-      - name: Publish Test Report
-        uses: mikepenz/action-junit-report@v3
+        run: # execute your tests generating test results
+      - name: Upload Test Report
+        uses: actions/upload-artifact@v3
         if: always() # always run even if the previous step fails
         with:
-          report_paths: target/surefire-reports/*.xml
+          name: junit-test-results
+          path: target/surefire-reports/*.xml
+          retention-days: 1
 
-      - name: Test Report - JUnit table
-        uses: dorny/test-reporter@v1.5.0
-        if: success() || failure()    # run this step even if previous step failed
+---
+name: report
+on:
+  workflow_run:
+    workflows: [build]
+    types: [completed]
+    
+permissions:
+  checks: write
+
+jobs:
+  checks:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download Test Report
+        uses: dawidd6/action-download-artifact@v2
         with:
-          name: JUnit Test results            # Name of the check run which will be created
-          path: target/surefire-reports/*.xml    # Path to test results
-          reporter: java-junit        # Format of test results
+          name: junit-test-results
+          workflow: ${{ github.event.workflow.id }}
+          run_id: ${{ github.event.workflow_run.id }}
+      - name: Publish Test Report
+        uses: mikepenz/action-junit-report@v3
+        with:
+          commit: ${{github.event.workflow_run.head_sha}}
+          report_paths: target/surefire-reports/*.xml
