--- a/.github/workflows/JUnit Report Action.yml
+++ b/.github/workflows/JUnit Report Action.yml
@@ -9,18 +9,33 @@ jobs:
   build:
     name: Build and Run Tests
     runs-on: ubuntu-latest
+    permissions: read-all
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v1
+
+      - name: Set up JDK 18
+        uses: actions/setup-java@v1
+        with:
+          java-version: 18
+
       - name: Build and Run Tests
-        run: # execute your tests generating test results
-      - name: Upload Test Report
-        uses: actions/upload-artifact@v3
+        run: mvn test # execute your tests generating test results
+        
+      - name: Publish Test Report
+        uses: mikepenz/action-junit-report@v3
         if: always() # always run even if the previous step fails
         with:
-          name: junit-test-results
-          path: '**/build/test-results/test/TEST-*.xml'
-          retention-days: 1
+          report_paths: target/surefire-reports/*.xml
+
+      - name: Test Report - JUnit table
+        uses: dorny/test-reporter@v1.5.0
+        if: success() || failure()    # run this step even if previous step failed
+        with:
+          name: JUnit Test results            # Name of the check run which will be created
+          path: target/surefire-reports/*.xml    # Path to test results
+          reporter: java-junit        # Format of test results
+
 
 ---
 name: report
