--- a/.github/workflows/Dependabot Auto Merge.yml
+++ b/.github/workflows/Dependabot Auto Merge.yml
@@ -6,6 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
+  permissions: read-all
   auto-merge:
     runs-on: ubuntu-latest
     steps:
@@ -13,4 +14,4 @@ jobs:
       - uses: ahmadnassri/action-dependabot-auto-merge@v2
         with:
           target: minor
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN}}
