--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,14 +1,14 @@
 name: auto-merge
 
 on:
-  
+  pull_request:
 
   workflow_dispatch:
 
 jobs:
   auto-merge:
     permissions: write-all
-    runs-on: ubuntu-latest 
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: ahmadnassri/action-dependabot-auto-merge@v2
