--- a/.github/workflows/JUnit Report Action.yml
+++ b/.github/workflows/JUnit Report Action.yml
@@ -21,7 +21,7 @@ jobs:
           java-version: 18
 
       - name: Build with Maven
-        run: mvn --batch-mode --update-snapshots package  -Dmaven.javadoc.skip=true verify
+        run: mvn --batch-mode --update-snapshots package  -Dmaven.javadoc.skip=true verify -Dgpg.skip
 
       - name: Build and Run Tests
         run: mvn test # execute your tests generating test results
