--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,19 +1,16 @@
-name: Dependabot
-on: pull_request
+name: Auto approve
+
+on: pull_request_target
 
 jobs:
   auto-approve:
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
+    if: github.actor == 'dependabot[bot]'
     steps:
-      - uses: hmarr/auto-approve-action@v2.0.0
-        if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
+      - uses: hmarr/auto-approve-action@v3
         with:
-          github-token: "${{ secrets.GITHUB_TOKEN }}"
-
-  auto-merge:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: ahmadnassri/action-dependabot-auto-merge@v1
-    with:
-      target: patch
-      github-token: ${{ secrets.DEPENDABOT_AUTOMERGE_TOKEN }}
+          review-message: "Auto approved automated PR"
+          github-token: ${{secrets.GITHUB_TOKEN}}
+  
