--- a/.github/workflows/JUnit Report Action.yml
+++ b/.github/workflows/JUnit Report Action.yml
@@ -27,8 +27,8 @@ jobs:
         run: mvn test # execute your tests generating test results
         
       - name: Publish Test Report
-        uses: mikepenz/action-junit-report@v3.7.5
-        if: always() # always run even if the previous step fails
+        uses: mikepenz/action-junit-report@v3
+        if: success() || failure() # always run even if the previous step fails
         with:
           report_paths: target/surefire-reports/*.xml
 
