--- a/.github/workflows/JUnit Report Action.yml
+++ b/.github/workflows/JUnit Report Action.yml
@@ -20,10 +20,7 @@ jobs:
         with:
           java-version: 18
 
-      - name: Build with Maven
-        run: mvn --batch-mode --update-snapshots package  -Dmaven.javadoc.skip=true verify -Dgpg.skip
-
-      - name: Build and Run Tests
+      - name: Run Tests
         run: mvn test # execute your tests generating test results
         
       - name: Publish Test Report
