--- a/pom.xml
+++ b/pom.xml
@@ -4,17 +4,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    
+    
     <groupId>io.github.Core310</groupId>
     <artifactId>FFXIV-Wiki-Fetcher</artifactId>
-    <version>2.1.1</version>
+    <version>2.1.0</version>
     <packaging>jar</packaging>
 
     <name>FFXIV-Wiki-Fetcher</name>
     <description>Searches for DOH/DOL gathering nodes (aka gathering classes) from the consolegameswiki and outputs them in a neat and readable format.
     </description>
     <url>https://github.com/Core310/FFXIV-Wiki-Fetcher</url>
-
-    
     
     <licenses>
         <license>
@@ -40,14 +40,15 @@
 
     <distributionManagement>
         <snapshotRepository>
-            <id>FFXIV-Wiki-Fetcher</id>
+            <id>ossrh</id>
             <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
         </snapshotRepository>
         <repository>
-            <id>FFXIV-Wiki-Fetcher</id>
+            <id>ossrh</id>
             <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
     </distributionManagement>
+
 
 
     <properties>
@@ -70,6 +71,11 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.2</version>
             </plugin>
 
 
